# gws-mcp-advanced

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH_IMPROVEMENT_PLAN.md  Apps-Script-support-SPEC.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_MARKDOWN.md  ISSUE_REPORT.md  PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  ROADMAP.md  SECURITY.md  SPEC-11.md  TASKS.md  TESTING_PLAN_MARKDOWN.md  TEST_RESULTS.md  debug_table_indices.py  description.txt  fastmcp_server.py  loop.sh  main.py  package.json  pyproject.toml  pyrightconfig.json  tach.toml
agent-docs/: INDEX.md
auth/: ARCHITECTURE.md  __init__.py  auth_info_middleware.py  config.py  credential_store.py  diagnostics.py  external_oauth_provider.py  google_auth.py  google_oauth_config.py  interfaces.py  mcp_session_middleware.py  oauth21_session_store.py  oauth_callback_server.py  oauth_clients.py  oauth_config.py  oauth_responses.py  oauth_types.py  scopes.py  security_io.py  service_decorator.py
core/: __init__.py  api_enablement.py  attachment_storage.py  comments.py  config.py  container.py  context.py  errors.py  log_formatter.py  managers.py  server.py  tool_registry.py  tool_tier_loader.py  tool_tiers.yaml  types.py  utils.py
docs/: COMPARISON.md  DISTRIBUTION_RELEASE.md  DISTRIBUTION_TEST_PHASE.md  DRY_RUN_MATRIX.md  INDEX.md  MCP_SECURITY_STRATEGY.md  OPENCODE_MCP_MANUAL_TESTING.md  PYTHON_CONVENTIONS.md  RELEASE_NOTES.md  STATUS.md  TEAM_GUIDE_GEMINI_CLI.md  TESTING_WITH_MCP.md
gappsscript/: __init__.py  apps_script_manager.py  apps_script_tools.py  models.py
gcalendar/: calendar_helpers.py  calendar_tools.py
gchat/: chat_tools.py
gdocs/: __init__.py  comments.py  docs_helpers.py  docs_structure.py  docs_tables.py  docs_tools.py  elements.py  export.py  markdown_parser.py  reading.py  tables.py  writing.py
gdrive/: __init__.py  drive_helpers.py  drive_tools.py  files.py  permissions.py  search.py  sync_tools.py
gforms/: forms_tools.py
gmail/: __init__.py  filters.py  gmail_tools.py  helpers.py  labels.py  messages.py  search.py  threads.py
gsearch/: search_tools.py
gsheets/: __init__.py  sheets_helpers.py  sheets_tools.py
gslides/: slides_tools.py
gtasks/: tasks_tools.py
rules/: api_design.md  architecture.md  devops.md  documentation.md  logging.md  rules_python.md  security.md  testing.md  workflow.md
scripts/: check_distribution_scope.py  check_docs_separation.py  check_dry_run_defaults.py  check_pypi_version_available.py  check_release_version_match.py  check_tool_decorators.py  diagnose_bold_bleed.py  mcp_live_cleanup.py  opencode_sdk_smoke.mjs  opencode_serve_smoke.sh  test_bold_api.py
specs/: 01_diagnostics_and_testing.md  01_gmail_helpers.md  02_gmail_modules.md  02_session_persistence_and_recovery.md  03_architecture_and_consolidation.md  03_drive_refactor.md  README.md  (+6 more)
(+127 files in other folders)
